--- a/config/boards/shields/klor/klor_common.dtsi
+++ b/config/boards/shields/klor/klor_common.dtsi
@@ -20,19 +20,19 @@
 		diode-direction = "col2row";		
 	};
 
-	left_encoder: encoder_left {
-		compatible = "alps,ec11";
-		label = "LEFT_ENCODER";
-		resolution = <4>;
-		status = "disabled";
-	};
+    left_encoder: encoder_left {
+        compatible = "alps,ec11";
+        a-gpios = <&pro_micro 21 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        b-gpios = <&pro_micro 20 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        steps = <30>;
+    };
 
-	right_encoder: encoder_right {
-		compatible = "alps,ec11";
-		label = "RIGHT_ENCODER";
-		resolution = <4>;
-		status = "disabled";
-	};
+    right_encoder: encoder_right {
+        compatible = "alps,ec11";
+        a-gpios = <&pro_micro 21 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        b-gpios = <&pro_micro 20 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        steps = <30>;
+    };
 
 	sensors {
 		compatible = "zmk,keymap-sensors";
