--- a/config/boards/shields/klor/klor_common.dtsi
+++ b/config/boards/shields/klor/klor_common.dtsi
@@ -20,15 +20,17 @@
 		diode-direction = "col2row";		
 	};
 
-    left_encoder: encoder_left {
-        compatible = "alps,ec11";
-        steps = <30>;
-    };
+	left_encoder: encoder_left {
+		compatible = "alps,ec11";
+		label = "LEFT_ENCODER";
+		steps = <30>;
+	};
 
-    right_encoder: encoder_right {
-        compatible = "alps,ec11";
-        steps = <30>;
-    };
+	right_encoder: encoder_right {
+		compatible = "alps,ec11";
+		label = "RIGHT_ENCODER";
+		steps = <30>;
+	};
 
 	sensors {
 		compatible = "zmk,keymap-sensors";
