--- a/config/klor.conf
+++ b/config/klor.conf
@@ -9,3 +9,5 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 #CONFIG_ZMK_RGB_UNDERGLOW=y
 #CONFIG_WS2812_STRIP=y
 #CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=40
+
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
