increase bt powa

--- a/config/klor.conf
+++ b/config/klor.conf
@@ -11,3 +11,5 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 #CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=40
 
 #CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
+# Increasing the transmit power of the keyboard's BLE radio
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
