--- a/build.yaml
+++ b/build.yaml
@@ -23,3 +23,5 @@ include:
     shield: settings_reset
   - board: seeeduino_xiao_ble
     shield: klor_dongle
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
