add usb logging to dongle

--- a/build.yaml
+++ b/build.yaml
@@ -23,5 +23,6 @@ include:
     shield: settings_reset
   - board: seeeduino_xiao_ble
     shield: klor_dongle
+    snippet: zmk-usb-logging
   - board: seeeduino_xiao_ble
     shield: settings_reset
