update to mimc aurora dongle example

--- a/build.yaml
+++ b/build.yaml
@@ -16,13 +16,18 @@ include:
   - board: nice_nano_v2
     shield: klor_left
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+  
   - board: nice_nano_v2
     shield: klor_right
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+  
   - board: nice_nano_v2
     shield: settings_reset
+  
   - board: seeeduino_xiao_ble
     shield: klor_dongle
-    snippet: zmk-usb-logging
+    snippet: studio-rpc-usb-uart
+    cmake-args:  -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y -DCONFIG_ZMK_SPLIT=y   -DCONFIG_ZMK_STUDIO=y
+  
   - board: seeeduino_xiao_ble
     shield: settings_reset
