--- a/config/boards/shields/klor/klor_dongle.conf
+++ b/config/boards/shields/klor/klor_dongle.conf
@@ -1,2 +1,5 @@
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 CONFIG_ZMK_SLEEP=n
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_CTLR_PHY_2M=n
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
