update zmk and build yaml

--- a/build.yaml
+++ b/build.yaml
@@ -23,10 +23,14 @@ include:
   
   - board: nice_nano_v2
     shield: settings_reset
-  
-  - board: seeeduino_xiao_ble
+
+  - board: nice_nano_v2
     shield: klor_dongle dongle_display
     cmake-args:  -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y -DCONFIG_ZMK_SPLIT=y
   
-  - board: seeeduino_xiao_ble
-    shield: settings_reset
+  # - board: seeeduino_xiao_ble
+  #   shield: klor_dongle dongle_display
+  #   cmake-args:  -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y -DCONFIG_ZMK_SPLIT=y
+  
+  # - board: seeeduino_xiao_ble
+  #   shield: settings_reset
