--- a/config/boards/shields/dongle_display/dongle_display.zmk.yml
+++ b/config/boards/shields/dongle_display/dongle_display.zmk.yml
@@ -3,5 +3,4 @@ id: dongle_display
 name: dongle_display
 type: shield
 url: https://github.com/englmaxi/zmk-config
-requires: 
-  - i2c_oled
+requires: [i2c_oled]
