--- a/config/boards/shields/klor/klor_dongle.conf
+++ b/config/boards/shields/klor/klor_dongle.conf
@@ -18,3 +18,6 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 # 进入空闲状态前的不活动毫秒数
 CONFIG_ZMK_IDLE_TIMEOUT=15000
+
+CONFIG_ZMK_DONGLE_DISPLAY_DONGLE_BATTERY=y
+#CONFIG_ZMK_DONGLE_DISPLAY_MAC_MODIFIERS=y
