--- a/config/boards/shields/klor/klor_left.conf
+++ b/config/boards/shields/klor/klor_left.conf
@@ -5,8 +5,8 @@ CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # battery reporting
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 # 电池电量报告间隔时间单位是秒
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
 # 不活动 15 分钟后进入深度睡眠,深度睡眠纯在屏幕无法唤醒问题,是zmk固件本身问题已经在解决了
