--- a/config/boards/shields/klor/klor_dongle.conf
+++ b/config/boards/shields/klor/klor_dongle.conf
@@ -1,8 +1,18 @@
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
-CONFIG_ZMK_SLEEP=n
+# better range
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_BT_CTLR_PHY_2M=n
+# use internal oscillator
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
+# disable 2M support and enable BT secure connection passkey
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+# 3 profiles (n+2)
+CONFIG_BT_MAX_CONN=5
+CONFIG_BT_MAX_PAIRED=5
+
+# combo config
+CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=7
+
+# dongle mode
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
 # display
 CONFIG_ZMK_DISPLAY=y
