--- a/config/boards/shields/klor/klor_left.conf
+++ b/config/boards/shields/klor/klor_left.conf
@@ -1,16 +1,9 @@
-CONFIG_BT_CTLR_PHY_2M=n
-CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+# better range
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# use internal oscillator
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
+# disable 2M support and enable BT secure connection passkey
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
-
-# battery reporting
-# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
-# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
-CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
-CONFIG_ZMK_IDLE_TIMEOUT=15000
-
-CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
-CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
