--- a/config/boards/shields/klor/klor_dongle.conf
+++ b/config/boards/shields/klor/klor_dongle.conf
@@ -19,3 +19,4 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_IDLE_TIMEOUT=6000000
 CONFIG_BT_BAS=n
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_DONGLE_DISPLAY_MAC_MODIFIERS=y
